--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -1,1 +1,11 @@
-/* Add global CSS here */
+/* Reset default margin and padding */
+/*#root {*/
+/*    background-color: #ff5858; !* Slight gray background *!*/
+/*    height: 100vh;*/
+/*}*/
+
+body, html {
+    height: 100%;
+    margin: 0;
+    font-family: Calibri, Arial, sans-serif;
+}
