--- a/src/components/main/tagsList.css
+++ b/src/components/main/tagsList.css
@@ -2,22 +2,20 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    margin: 0 -10px;
 }
 
 .tag-box {
-    border: 1px dotted #333;
+    flex: 0 0 calc(50.33% - 10px);
+    box-sizing: border-box;
+    text-align: center;
+    margin: 0 10px 20px;
     padding: 10px;
-    margin: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
 }
 
-.tag-link {
-    text-decoration: none;
-    color: #333;
-    font-weight: bold;
-}
 
 .dotted-line {
-    border-top: 1px dotted #333;
-    width: 100%;
-    margin-top: 20px;
+    border: 2px dotted #333;
 }
