--- a/src/components/main/Answers/AnswersPage.css
+++ b/src/components/main/Answers/AnswersPage.css
@@ -32,5 +32,16 @@
     font-size: 16px;
 }
 
-.asked-data {
+.answer-card {
+    height: 10%;
+    width: 100%;
+    max-width: 90%;
+    margin: 1% auto;
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0.1, 0.1, 0.1, 0.2);
+    border-radius: 8px;
+    padding: 2%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
