--- a/src/components/main/Answers/AnswersPage.css
+++ b/src/components/main/Answers/AnswersPage.css
@@ -45,3 +45,36 @@
     flex-direction: row;
     justify-content: space-between;
 }
+
+.button-container {
+  margin-top: 20px;
+}
+
+.answer-question {
+  background-color: dodgerblue;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+  margin-right: 10px;
+}
+
+.answer-question:hover {
+  background-color: #83beff;
+}
+
+.question-detail {
+  background-color: dodgerblue;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+.question-detail:hover {
+  background-color: #83beff;
+}
